--- a/index.html
+++ b/index.html
@@ -87,50 +87,81 @@
       color: #fff;
       text-align: center;
     }
-    #step2 .header-box {
-      display: inline-block;
-      padding: 10px 20px;
+    /* 新增：整個內容 flex 三段式排版 */
+    .step2-container {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      /* 三段式上下各自高度：
+         header 固定高、images 區用可伸縮、footer 固定高 */
+      justify-content: space-between;
+      padding: 2vh 2vw;
+      box-sizing: border-box;
+    }
+    /* header */
+    .step2-container .header-box {
+      font-size: 2.2vh;
+      padding: 1vh 2vw;
       background: #82A7FE;
       border-radius: 8px;
-      font-size: 18px;
-      margin-bottom: 16px;
     }
+
+    /* 圖片區：兩排三欄，高度自動填滿剩餘 */
     .images-container2 {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      gap: 12px;
-      justify-items: center;
-      padding: 10px;
+      grid-template-rows: repeat(2, 1fr);
+      gap: 1.5vh 1.5vw;
+      width: 100%;
+      max-width: 800px;
+      /* 剩餘高度 = 100vh - header(約6vh) - footer(約12vh) - 上下 padding(4vh) */
+      height: calc(100vh - 6vh - 12vh - 4vh);
     }
+
     .images-container2 .image-option {
-      width: 30vw;
-      max-width: 160px;
+      width: 100%;
+      height: 100%;
       border: 4px solid transparent;
       border-radius: 8px;
       overflow: hidden;
       transition: transform .3s;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
-    .images-container2 .image-option.selected { border-color: red; }
+
+    .images-container2 .image-option.selected {
+      border-color: red;
+    }
+
     .images-container2 .image-option img {
       width: 100%;
-      height: auto;
+      height: 100%;
+      object-fit: contain;
       display: block;
     }
-    #step2 .message-box {
-      display: none;
-      margin-top: 16px;
-      font-size: 16px;
+
+    /* footer */
+    .step2-container .footer {
+      width: 100%;
+      max-width: 800px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1vh;
     }
-    #step2 .button {
-      border-radius: 6px;
-      padding: 10px 20px;
-      font-size: 16px;
-      margin-top: 16px;
-      transition: transform .3s;
+
+    .step2-container .footer .message-box {
+      font-size: 2vh;
+    }
+
+    .step2-container .footer .button {
+      padding: 1vh 2vw;
+      font-size: 2vh;
       background: #82A7FE;
-      color: #fff;
+      border-radius: 6px;
     }
-    #step2 .button:hover { transform: scale(1.05); }
 
     /* 步驟3：下載（原封不動的 CSS） */
     #step3 {
@@ -158,7 +189,7 @@
       transition: transform .3s;
     }
     /* #step3 .button:hover { transform: scale(1.05); } */
-    #step3 img { max-width:20%; border-radius:8px; }
+    #step3 img { max-width:40%; border-radius:8px; }
 
     /* 響應式 */
     @media(max-width:480px) {
@@ -195,17 +226,21 @@
 
   <!-- 步驟2：六選一 -->
   <div id="step2">
-    <div class="header-box">敬請選擇您喜歡的桌布 (六選一)</div>
-    <div class="images-container2">
-      <div class="image-option" onclick="selectImage(1)"><img src="images/1.jpg" alt="桌布1"></div>
-      <div class="image-option" onclick="selectImage(2)"><img src="images/2.jpg" alt="桌布2"></div>
-      <div class="image-option" onclick="selectImage(3)"><img src="images/3.jpg" alt="桌布3"></div>
-      <div class="image-option" onclick="selectImage(4)"><img src="images/4.jpg" alt="桌布4"></div>
-      <div class="image-option" onclick="selectImage(5)"><img src="images/5.jpg" alt="桌布5"></div>
-      <div class="image-option" onclick="selectImage(6)"><img src="images/6.jpg" alt="桌布6"></div>
+    <div class="step2-container">
+      <div class="header-box">敬請選擇您喜歡的桌布 (六選一)</div>
+      <div class="images-container2">
+        <div class="image-option" onclick="selectImage(1)"><img src="images/1.jpg" alt="桌布1"></div>
+        <div class="image-option" onclick="selectImage(2)"><img src="images/2.jpg" alt="桌布2"></div>
+        <div class="image-option" onclick="selectImage(3)"><img src="images/3.jpg" alt="桌布3"></div>
+        <div class="image-option" onclick="selectImage(4)"><img src="images/4.jpg" alt="桌布4"></div>
+        <div class="image-option" onclick="selectImage(5)"><img src="images/5.jpg" alt="桌布5"></div>
+        <div class="image-option" onclick="selectImage(6)"><img src="images/6.jpg" alt="桌布6"></div>
+      </div>
+      <div class="footer">
+        <div class="message-box" id="msg">您選擇為紅框的圖，請按確認</div>
+        <button class="button" onclick="confirmSelection()">確認</button>
+      </div>
     </div>
-    <div class="message-box" id="msg">您選擇為紅框的圖，請按確認</div>
-    <button class="button" onclick="confirmSelection()">確認</button>
   </div>
 
   <!-- 步驟3：下載 -->
