--- a/index.html
+++ b/index.html
@@ -162,6 +162,52 @@
       background: #82A7FE;
       border-radius: 6px;
     }
+    /*
+    #step2 .header-box {
+      display: inline-block;
+      padding: 10px 20px;
+      background: #82A7FE;
+      border-radius: 8px;
+      font-size: 18px;
+      margin-bottom: 16px;
+    }
+    .images-container2 {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 12px;
+      justify-items: center;
+      padding: 10px;
+    }
+    .images-container2 .image-option {
+      width: 30vw;
+      max-width: 160px;
+      border: 4px solid transparent;
+      border-radius: 8px;
+      overflow: hidden;
+      transition: transform .3s;
+    }
+    .images-container2 .image-option.selected { border-color: red; }
+    .images-container2 .image-option img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+    #step2 .message-box {
+      display: none;
+      margin-top: 16px;
+      font-size: 16px;
+    }
+    #step2 .button {
+      border-radius: 6px;
+      padding: 10px 20px;
+      font-size: 16px;
+      margin-top: 16px;
+      transition: transform .3s;
+      background: #82A7FE;
+      color: #fff;
+    }
+    #step2 .button:hover { transform: scale(1.05); }
+    */
 
     /* 步驟3：下載（原封不動的 CSS） */
     #step3 {
@@ -225,23 +271,29 @@
   </div>
 
   <!-- 步驟2：六選一 -->
-  <div id="step2">
-    <div class="step2-container">
-      <div class="header-box">敬請選擇您喜歡的桌布 (六選一)</div>
-      <div class="images-container2">
-        <div class="image-option" onclick="selectImage(1)"><img src="images/1.jpg" alt="桌布1"></div>
-        <div class="image-option" onclick="selectImage(2)"><img src="images/2.jpg" alt="桌布2"></div>
-        <div class="image-option" onclick="selectImage(3)"><img src="images/3.jpg" alt="桌布3"></div>
-        <div class="image-option" onclick="selectImage(4)"><img src="images/4.jpg" alt="桌布4"></div>
-        <div class="image-option" onclick="selectImage(5)"><img src="images/5.jpg" alt="桌布5"></div>
-        <div class="image-option" onclick="selectImage(6)"><img src="images/6.jpg" alt="桌布6"></div>
+  <head>
+    <!-- 千萬別忘了這行，才能讓手機真正以裝置寬度來跑排版！ -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  <body>
+      <div id="step2">
+        <div class="step2-container">
+          <div class="header-box">敬請選擇您喜歡的桌布 (六選一)</div>
+          <div class="images-container2">
+            <div class="image-option" onclick="selectImage(1)"><img src="images/1.jpg" alt="桌布1"></div>
+            <div class="image-option" onclick="selectImage(2)"><img src="images/2.jpg" alt="桌布2"></div>
+            <div class="image-option" onclick="selectImage(3)"><img src="images/3.jpg" alt="桌布3"></div>
+            <div class="image-option" onclick="selectImage(4)"><img src="images/4.jpg" alt="桌布4"></div>
+            <div class="image-option" onclick="selectImage(5)"><img src="images/5.jpg" alt="桌布5"></div>
+            <div class="image-option" onclick="selectImage(6)"><img src="images/6.jpg" alt="桌布6"></div>
+          </div>
+          <div class="footer">
+            <div class="message-box" id="msg">您選擇為紅框的圖，請按確認</div>
+            <button class="button" onclick="confirmSelection()">確認</button>
+          </div>
+        </div>
       </div>
-      <div class="footer">
-        <div class="message-box" id="msg">您選擇為紅框的圖，請按確認</div>
-        <button class="button" onclick="confirmSelection()">確認</button>
-      </div>
-    </div>
-  </div>
+   </body>
 
   <!-- 步驟3：下載 -->
   <div id="step3">
