--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     html, body {
       width: 100%;
       height: 100%;
-      overflow: hidden;
       font-family: 'Noto Sans TC', sans-serif;
       background-color: #0A2E66;
+      overflow-x: hidden;
+      overflow-y: auto;
     }
     button { cursor: pointer; }
 
@@ -76,7 +77,6 @@
       background-color: rgba(0,0,0,0.6);
     }
 
-    /* 步驟2：六選一（原封不動的 CSS） */
     /* 步驟2：六選一 */
     #step2 {
       display: none;
@@ -115,8 +115,7 @@
       gap: 1.5vh 1.5vw;
       width: 100%;
       max-width: 800px;
-      /* 剩餘高度 = 100vh - header(約6vh) - footer(約12vh) - 上下 padding(4vh) */
-      height: calc(100vh - 6vh - 12vh - 4vh);
+      margin: 0 auto;
     }
 
     .images-container2 .image-option {
@@ -129,6 +128,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      aspect-ratio: 9/16;      /* 可改成你圖片的長寬比 */
     }
 
     .images-container2 .image-option.selected {
@@ -162,52 +162,6 @@
       background: #82A7FE;
       border-radius: 6px;
     }
-    /*
-    #step2 .header-box {
-      display: inline-block;
-      padding: 10px 20px;
-      background: #82A7FE;
-      border-radius: 8px;
-      font-size: 18px;
-      margin-bottom: 16px;
-    }
-    .images-container2 {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 12px;
-      justify-items: center;
-      padding: 10px;
-    }
-    .images-container2 .image-option {
-      width: 30vw;
-      max-width: 160px;
-      border: 4px solid transparent;
-      border-radius: 8px;
-      overflow: hidden;
-      transition: transform .3s;
-    }
-    .images-container2 .image-option.selected { border-color: red; }
-    .images-container2 .image-option img {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-    #step2 .message-box {
-      display: none;
-      margin-top: 16px;
-      font-size: 16px;
-    }
-    #step2 .button {
-      border-radius: 6px;
-      padding: 10px 20px;
-      font-size: 16px;
-      margin-top: 16px;
-      transition: transform .3s;
-      background: #82A7FE;
-      color: #fff;
-    }
-    #step2 .button:hover { transform: scale(1.05); }
-    */
 
     /* 步驟3：下載（原封不動的 CSS） */
     #step3 {
@@ -244,8 +198,8 @@
       .vertical-text { font-size: 14px; }
       #step2 .header-box { font-size: 16px; padding: 8px 16px; }
       #step2 .button, #step3 .button { font-size: 14px; padding: 8px 16px; }
-      .images-container2 { grid-template-columns: repeat(2,1fr); }
-      .images-container2 .image-option { width: 40vw; }
+      /*.images-container2 { grid-template-columns: repeat(2,1fr); }
+      .images-container2 .image-option { width: 40vw; }*/
     }
   </style>
 </head>
