--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       margin-bottom: 1rem;
     }
     .cover-text.title {
-      font-size:3rem;
+      font-size:30pt;
       margin-bottom: 2rem;
     }
     .vertical-text {
