--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  
   <title>手機桌布免費贈送計畫</title>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet"/>
   <style>
@@ -19,6 +19,7 @@
       background-repeat: no-repeat;
       overflow-x: hidden;
       overflow-y: auto;
+      font-size: 16px;
     }
     button { cursor: pointer; }
 
@@ -47,7 +48,7 @@
       margin-bottom: 1rem;
     }
     .cover-text.title {
-      font-size:30pt;
+      font-size:3rem;
       margin-bottom: 2rem;
     }
     .vertical-text {
