v3 modify line notification

--- a/index.html
+++ b/index.html
@@ -242,12 +242,16 @@
     <h2>您的專屬桌布</h2>
     <img id="resultImg" src="" alt="選擇的桌布">
     <div style="margin-top:20px;">
-        <a id="downloadLink" class="button" href="" download="">下載桌布</a>
+        <button class="button" onclick="downloadImage()">下載桌布</button>
         <button class="button" style="margin-left:12px;" onclick="restart()">重新選擇</button>
     </div>
   </div>
 
   <script>
+    // ✅ 新增這段在最上面
+    if (navigator.userAgent.includes("Line")) {
+    alert("⚠️ 為了確保下載順利，請使用手機內建瀏覽器（如 Chrome、Safari）開啟本網頁\n 可點選右下角 ⋮ 選擇\"使用預設瀏覽器開啟\" ");
+    }
     // 前往 Step2：隱藏 Step1、顯示 Step2
     function nextStep() {
       document.getElementById('step1').style.display = 'none';
@@ -272,11 +276,6 @@
       }
       document.getElementById('step2').style.display = 'none';
       document.getElementById('step3').style.display = 'block';
-
-      // 設定圖片與下載連結
-      document.getElementById('resultImg').src = `images/${selected}.jpg`;
-      document.getElementById('downloadLink').href = `images/${selected}.jpg`;
-      document.getElementById('downloadLink').download = `桌布_${selected}.jpg`;
     }
 
     // 步驟3 下載 & 重選
@@ -290,7 +289,7 @@
 
       // 新增提示文字
       setTimeout(() => {
-        alert('下載完成，請至設定將圖片設為您的桌布');
+        alert('✅ 下載完成，請至設定將圖片設為您的桌布');
       }, 1000); 
     }
     function restart() {
